experimenting with loader

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,11 +1,11 @@
 <!-- Footer -->
 
-    <footer>
+    <footer id="footer">
       Footer
     </footer>
-
+</div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
+	<script type="text/javascript" src="assets/js/script.js"></script>
   </body>
 
 </html>
