--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -17,13 +17,15 @@
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+{{!-- <link rel="stylesheet" type="text/css" href="src/css/main.css">
+ --}}
 <style>
 body {
-    background: url("181H.jpg");
+    /*background: url("181H.jpg");*/
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+    background: #000;
     color: #fff;
 }
 
@@ -44,19 +46,19 @@ h1 {
     color: #fff;
 }
 
-#prelaoder {
+#preloader {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background: rgba(10, 10, 10, 1);
-    z-index: 1000
+    z-index: 1000;
 }
 
 .spinner {
     text-align: center;
-    font-size: 10px
+    font-size: 10px;
 }
 
 .spinner, .spinner-inner {
@@ -67,7 +69,7 @@ h1 {
     left: 0;
     border: 9px solid #fff;
     border-color: transparent #fff;
-    margin: auto
+    margin: auto;
 }
 
 .spinner {
@@ -75,7 +77,7 @@ h1 {
     height: 85px;
     -webkit-animation: spin 2.2s linear 0s infinite normal;
     -moz-animation: spin 2.2s linear 0s infinite normal;
-    animation: spin 2.2s linear 0s infinite normal
+    animation: spin 2.2s linear 0s infinite normal;
 }
 
 .spinner-inner {
@@ -83,7 +85,7 @@ h1 {
     height: 40px;
     -webkit-animation: spinback 1.2s linear 0s infinite normal;
     -moz-animation: spinback 1.2s linear 0s infinite normal;
-    animation: spinback 1.2s linear 0s infinite normal
+    animation: spinback 1.2s linear 0s infinite normal;
 }
 
 @-webkit-keyframes spin {
@@ -97,46 +99,46 @@ h1 {
 
 @-moz-keyframes spin {
     from {
-        -moz-transform: rotate(0)
+        -moz-transform: rotate(0);
     }
     to {
-        -moz-transform: rotate(360deg)
+        -moz-transform: rotate(360deg);
     }
 }
 
 @keyframes spin {
     from {
-        transform: rotate(0)
+        transform: rotate(0);
     }
     to {
-        transform: rotate(360deg)
+        transform: rotate(360deg);
     }
 }
 
 @-webkit-keyframes spinback {
     from {
-        -webkit-transform: rotate(0)
+        -webkit-transform: rotate(0);
     }
     to {
-        -webkit-transform: rotate(-360deg)
+        -webkit-transform: rotate(-360deg);
     }
 }
 
 @-moz-keyframes spinback {
     from {
-        -moz-transform: rotate(0)
+        -moz-transform: rotate(0);
     }
     to {
-        -moz-transform: rotate(-360deg)
+        -moz-transform: rotate(-360deg);
     }
 }
 
 @keyframes spinback {
     from {
-        transform: rotate(0)
+        transform: rotate(0);
     }
     to {
-        transform: rotate(-360deg)
+        transform: rotate(-360deg);
     }
 }
 
@@ -172,7 +174,11 @@ h1 {
     <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-
+    <div class="container">
+        <div id="preloader">
+            <div class="spinner"><div class="spinner-inner"></div></div>
+        </div>
+    </div>
 <!-- nav -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -193,3 +199,4 @@ h1 {
             </div>
         </div>
     </nav>
+    <div class="container">
