fix gulp error of compiling sass

--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -1,4 +1,8 @@
 <div class="container">
-    <h1>Derek Haworth</h1>
-    <p>test test</p>
+	<div class="row">
+		<div class="col-md-12">
+			<h1>Derek Haworth</h1>
+    		<p>test test</p>
+		</div>
+	</div>
 </div>
