add header and footer elements

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,8 +1,10 @@
 <!-- Footer -->
 
-    <footer id="footer">
-      Footer
+	<footer id="footer" class="footer text-center">
+		<small>Made In <img src="img/chicago.svg" alt="Chicago"></small>
+    	<p class="copyright">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Derek Haworth. All rights reserved.</p>
     </footer>
+
 </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
