--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -8,9 +8,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Derek Haworth | {{title}}</title>
-<meta name="keywords" content="derek haworth, web design, web development, front-end, full stack, javascript, node, development">
-<meta name="description" content="I am a Chicago-based front-end developer, who specializes in helping you.">
+<title>{{title}} | Derek Haworth </title>
+<meta name="keywords" content="derek haworth, web development, front-end, full stack, javascript, node, react, development">
+<meta name="description" content="A Chicago-based full stack developer specializing in solutioning complex business problems">
 <meta name="author" content="Derek Haworth, derekhaw1@gmail.com">
 <meta name="copyright" content="Derek Haworth">
 <meta name="url" content="http://www.derekhaworth.com">
@@ -168,7 +168,9 @@ h1 {
   |  |__/  |  |   |  |
   |_______/|__|   |__|
 
-  *** How can I help? ***
+  *** Whoa! Inspecting my element? At least buy me dinner first ***
+
+                    *** How can I help? ***
 
 -->
     <!--[if lt IE 7]>
@@ -193,7 +195,9 @@ h1 {
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="{{#if active_projects}}active{{/if}}" href="/">projects</a></li>
-                    <li><a class="{{#if active_about}}active{{/if}}" href="/about">about</a></li>
+                    <li><a class="{{#if active_about}}active{{/if}}" href="/resume">resume</a></li>
+                    <li><a href="https://www.linkedin.com/in/derekhaw1/" target="_blank">linkedin</a></li>
+                    <li><a href="https://github.com/derek-haworth" target="_blank">github</a></li>
                     <li><a class="{{#if active_contact}}active{{/if}}" href="/contact">contact</a></li>
                 </ul>
             </div>
