--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -1,8 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<h1>Derek Haworth</h1>
-    		<p>test test</p>
+			<h1>projects section</h1>
 		</div>
 	</div>
 </div>
