--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,13 +1,28 @@
-<!-- Footer -->
+        <!-- Footer -->
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5 copyright">
+                            <small>Made In Chicago</small>
+            				<p class="copyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Derek Haworth. All rights reserved.</p>
+                        </div>
+                        <div class="col-md-7">
+                            <ul class="social-networks-ul list-inline">
+                            	<li><a href="https://github.com/derek-haworth" target="_blank" class="github-button">github</a></li>
+                               	<li><a href="https://www.linkedin.com/in/derekhaw1/" target="_blank" class="linkedin-button">linkedIn</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </footer>
 
-	<footer id="footer" class="footer text-center">
-		<small>Made In <img src="img/chicago.svg" alt="Chicago"></small>
-    	<p class="copyright">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Derek Haworth. All rights reserved.</p>
-    </footer>
+        </div>
+    </div>
 
-</div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
-  </body>
+    
+</body>
 
 </html>
