--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -1,7 +1,48 @@
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>projects section</h1>
+	<!-- jumbotron -->
+	<div class="jumbotron bg-none">
+		<div class="container">
+		    <div class="row">
+				<h1 class="uppercase">Finding a Developer<span class="block mtm">Just Got Easier</span></h1>
+				<p class="">// it's me. tehe</p>
+			</div>
 		</div>
 	</div>
-</div>
+
+	<!-- Projects Section -->
+	<div class="section-heading">
+		<div class="container">
+		    <div class="row">
+			    <div class="col-sm-6">
+			        <h2>projects</h2>
+			        <p class="article-h2-content">Some things I'm proud of. No big deal.</p>
+			    </div>
+		    </div>
+		</div>
+	</div>
+
+	<!-- projects gallery -->
+	<div class="gallery">
+	    <ul class="gallery-ul clearfix">
+	        <li>
+	           	<a href="/">
+	                <div class="gallery-header">
+	                    <h3>Project Title</h3>
+	                    <p>html / css / javaScript / node / mysql</p>
+	                </div>
+	               	<img src="images/crisiscorps-gallery.jpg" alt="Image of the crisiscorps dashboard page." />
+	           	</a>
+	       	</li>
+	    </ul>
+	</div>
+
+	<!-- Design & Development Section -->
+	<div class="section-heading">
+		<div class="container">
+		    <div class="row">
+		        <div class="col-sm-6">
+		            <h2>design &amp; development</h2>
+		            <p class="article-h2-content">Freelance design &amp; development projects and some personal ones</p>
+		        </div>
+		    </div>
+		</div>
+	</div>
