--- a/app/public/assets/sass/_objects.scss
+++ b/app/public/assets/sass/_objects.scss
@@ -3,20 +3,21 @@
 .thin { font-weight: $light; }
 .bold { font-weight: $bold; }
 .bolder { font-weight: $bolder; }
-.textCenter { text-align: center; }
-.textLeft { text-align: left; }
-.textRight { text-align: right; }
+.text-center { text-align: center; }
+.text-left { text-align: left; }
+.text-right { text-align: right; }
 .uppercase { text-transform: uppercase; }
 .underline { text-decoration: underline; }
 .text-none { text-decoration: none; }
 .full-width {width: 100%;}
 .bg-none { background: none!important; }
 .buffer { padding: 5% 0;}
+.strike { text-decoration: line-through;}
 
 
 // MARGIN 
 
-.no_margin { margin:0; }
+.no-margin { margin:0; }
 .padding { padding: 15px; }
 .mts { margin-top: 5px; }
 .mtm { margin-top: 10px; }
@@ -65,8 +66,8 @@
 .block { display: block; }
 .inline { display: inline; }
 .clear { clear: both; }
-.clear_right { clear: right; }
-.clear_left { clear: left; }
-.clear_none { clear: none; }
+.clear-right { clear: right; }
+.clear-left { clear: left; }
+.clear-none { clear: none; }
 .left { float: left; }
 .right { float: right; }
