--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -20,146 +20,120 @@
 <link rel="stylesheet" type="text/css" href="src/css/main.min.css">
 
 <style>
-body {
-    /*background: url("181H.jpg");*/
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background: #000;
-    color: #fff;
-}
-
-a {
-    color: #e5e5a7;
-}
-
-p {
-    font-size: 16px;
-}
-
-h1 {
-    font-family: Open Sans Condensed;
-    text-transform: uppercase;
-    font-size: 8em;
-    font-weight: 100;
-    text-align: center;
-    color: #fff;
-}
-
-#preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(10, 10, 10, 1);
-    z-index: 1000;
-}
-
-.spinner {
-    text-align: center;
-    font-size: 10px;
-}
-
-.spinner, .spinner-inner {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    border: 9px solid #fff;
-    border-color: transparent #fff;
-    margin: auto;
-}
-
-.spinner {
-    width: 85px;
-    height: 85px;
-    -webkit-animation: spin 2.2s linear 0s infinite normal;
-    -moz-animation: spin 2.2s linear 0s infinite normal;
-    animation: spin 2.2s linear 0s infinite normal;
-}
-
-.spinner-inner {
-    width: 40px;
-    height: 40px;
-    -webkit-animation: spinback 1.2s linear 0s infinite normal;
-    -moz-animation: spinback 1.2s linear 0s infinite normal;
-    animation: spinback 1.2s linear 0s infinite normal;
-}
-
-@-webkit-keyframes spin {
-    from {
-        -webkit-transform: rotate(0)
+    #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(10, 10, 10, 1);
+        z-index: 1000;
     }
-    to {
-        -webkit-transform: rotate(360deg)
-    }
-}
 
-@-moz-keyframes spin {
-    from {
-        -moz-transform: rotate(0);
+    .spinner {
+        text-align: center;
+        font-size: 10px;
     }
-    to {
-        -moz-transform: rotate(360deg);
-    }
-}
 
-@keyframes spin {
-    from {
-        transform: rotate(0);
+    .spinner, .spinner-inner {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        border: 9px solid #fff;
+        border-color: transparent #fff;
+        margin: auto;
     }
-    to {
-        transform: rotate(360deg);
-    }
-}
 
-@-webkit-keyframes spinback {
-    from {
-        -webkit-transform: rotate(0);
+    .spinner {
+        width: 85px;
+        height: 85px;
+        -webkit-animation: spin 2.2s linear 0s infinite normal;
+        -moz-animation: spin 2.2s linear 0s infinite normal;
+        animation: spin 2.2s linear 0s infinite normal;
     }
-    to {
-        -webkit-transform: rotate(-360deg);
-    }
-}
 
-@-moz-keyframes spinback {
-    from {
-        -moz-transform: rotate(0);
+    .spinner-inner {
+        width: 40px;
+        height: 40px;
+        -webkit-animation: spinback 1.2s linear 0s infinite normal;
+        -moz-animation: spinback 1.2s linear 0s infinite normal;
+        animation: spinback 1.2s linear 0s infinite normal;
     }
-    to {
-        -moz-transform: rotate(-360deg);
-    }
-}
 
-@keyframes spinback {
-    from {
-        transform: rotate(0);
+    @-webkit-keyframes spin {
+        from {
+            -webkit-transform: rotate(0)
+        }
+        to {
+            -webkit-transform: rotate(360deg)
+        }
     }
-    to {
-        transform: rotate(-360deg);
-    }
-}
 
-.snippet {
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    width: 50%;
-    margin: 20px auto;
-}
-
-@media (max-width: 640px) {
-    h1 {
-        font-size: 4em;
+    @-moz-keyframes spin {
+        from {
+            -moz-transform: rotate(0);
+        }
+        to {
+            -moz-transform: rotate(360deg);
+        }
     }
+
+    @keyframes spin {
+        from {
+            transform: rotate(0);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+
+    @-webkit-keyframes spinback {
+        from {
+            -webkit-transform: rotate(0);
+        }
+        to {
+            -webkit-transform: rotate(-360deg);
+        }
+    }
+
+    @-moz-keyframes spinback {
+        from {
+            -moz-transform: rotate(0);
+        }
+        to {
+            -moz-transform: rotate(-360deg);
+        }
+    }
+
+    @keyframes spinback {
+        from {
+            transform: rotate(0);
+        }
+        to {
+            transform: rotate(-360deg);
+        }
+    }
+
     .snippet {
-        width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 20px;
+        width: 50%;
+        margin: 20px auto;
     }
-}
+
+    @media (max-width: 640px) {
+        h1 {
+            font-size: 4em;
+        }
+        .snippet {
+            width: 100%;
+        }
+    }
 </style>
 
-<body>
+<body id="page-top">
     <!--Created by
    ______   __     __
   |   __  \|  |   |  |
@@ -170,7 +144,7 @@ h1 {
 
   *** Whoa! Inspecting my element? At least buy me dinner first ***
 
-                    *** How can I help? ***
+  *** How can I help you today? Email me: derekhaw1@gmail.com ***
 
 -->
     <!--[if lt IE 7]>
@@ -181,26 +155,33 @@ h1 {
             <div class="spinner"><div class="spinner-inner"></div></div>
         </div>
     </div>
-<!-- nav -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand back-to-top" href="/">Derek Haworth</a>
+
+    <header>
+        <!-- nav -->
+        <nav class="navbar navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand back-to-top" href="/">Derek Haworth</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="{{#if active_projects}}active{{/if}}" href="/">projects</a></li>
+                        <li><a class="{{#if active_about}}active{{/if}}" href="/about">about</a></li>
+                        <li><a href="https://www.linkedin.com/in/derekhaw1/" target="_blank">linkedin</a></li>
+                        <li><a href="https://github.com/derek-haworth" target="_blank">github</a></li>
+                        <li><a class="{{#if active_contact}}active{{/if}}" href="/contact">contact</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a class="{{#if active_projects}}active{{/if}}" href="/">projects</a></li>
-                    <li><a class="{{#if active_about}}active{{/if}}" href="/resume">resume</a></li>
-                    <li><a href="https://www.linkedin.com/in/derekhaw1/" target="_blank">linkedin</a></li>
-                    <li><a href="https://github.com/derek-haworth" target="_blank">github</a></li>
-                    <li><a class="{{#if active_contact}}active{{/if}}" href="/contact">contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container">
+        </nav>
+    </header>
+
+    <div class="buffer"></div>
+
+    <div class="container-fluid">
+        <div class="row">
