--- a/app/public/assets/sass/_body.scss
+++ b/app/public/assets/sass/_body.scss
@@ -59,15 +59,15 @@
   padding: 0;
 }
 
-.gallery ul li {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  margin-bottom: 1em;
-  list-style-type: none;
-  color: #47475c;
-  background: none;
-}
+// .gallery ul li {
+//   display: block;
+//   position: relative;
+//   overflow: hidden;
+//   margin-bottom: 1em;
+//   list-style-type: none;
+//   color: #47475c;
+//   background: none;
+// }
 
 /* Sets the pinkish redish background on gallery items to not show until hover listed below */
 .gallery-header {
