--- a/app/public/assets/sass/_variables.scss
+++ b/app/public/assets/sass/_variables.scss
@@ -8,5 +8,10 @@ $bolder:	700;
 $white: 	#fff;
 $black: 	#000;
 
-$base: 		#1f2631;
+$base: 		#2c3e50;
+
+$base-font: #5e7184;
+
+$off-pink: #fe6f83;
+
 
