--- a/app/public/assets/sass/main.scss
+++ b/app/public/assets/sass/main.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "normalize";
 @import "mixins";
-@import "objects";
+@import "utilities";
 @import "base";
 @import "layout";
 @import "layout";
