--- a/app/public/assets/sass/_variables.scss
+++ b/app/public/assets/sass/_variables.scss
@@ -7,11 +7,11 @@ $bolder:	700;
 // Colors
 $white: 	#fff;
 $black: 	#000;
-
 $base: 		#2c3e50;
-
 $base-font: #5e7184;
-
 $off-pink: #fe6f83;
+
+// Font Sizes
+$base-size: 16px;
 
 
