add favicon && data to json

--- a/app/public/assets/sass/_base.scss
+++ b/app/public/assets/sass/_base.scss
@@ -2,6 +2,11 @@
 body {
   background: $white;
 }
+a {
+  &:hover, &:focus, &:active {
+    background-color: transparent;
+  }
+}
 
 p {
   font-size: $base-size;
