--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -3,7 +3,11 @@
 		<div class="col-md-12">
 			<div class="contact">
 			    <h2><a href="mailto:derekhaw1@gmail.com?Subject=You%20Rock,%20Rock" target="_top">derekhaw1@gmail.com</a></h2>
-			    <p>Just click my email and it should open up your default client and begin your message. I can't wait to read it.</p>
+			    <div class="email-message">
+			    	<p class="mzero">// Just click my email and it should open up your default client and begin your message.</p>
+			    	<p class="mzero">// Or copy and paste it if that doesn't work.</p>
+			    	<p class="mzero">// I look forward to hearing from you.</p>
+			    </div>
 			</div>
 		</div>
 	</div>
