--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 		<div class="container">
 		    <div class="row">
 				<h1 class="uppercase mbm">Finding a Developer<span class="block mtm">Just Got Easier</span></h1>
-				<p class="">// it's me. tehe</p>
+				<p>// it's me. tehe</p>
 			</div>
 		</div>
 	</div>
