--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -32,7 +32,7 @@
 	</div>
 
 	<!-- Design & Development Section -->
-	<div class="section-heading">
+	{{!-- <div class="section-heading">
 		<div class="container">
 		    <div class="row">
 		        <div class="col-sm-6">
@@ -41,4 +41,4 @@
 		        </div>
 		    </div>
 		</div>
-	</div>
+	</div> --}}
