--- a/app/public/assets/sass/_variables.scss
+++ b/app/public/assets/sass/_variables.scss
@@ -7,6 +7,7 @@ $bolder:	700;
 // Colors
 $white: 	#fff;
 $black: 	#000;
+$body: 		#f1f4f9;
 $base: 		#2c3e50;
 $base-font: #5e7184;
 $off-pink:  #fe6f83;
