--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -24,12 +24,12 @@
 
 <body>
     <!--Created by
-   ______   __     __
-  |   __  \|  |   |  |
-  |  |  |  |  |___|  |
-  |  |  |  |   ___   | 
-  |  |__/  |  |   |  |
-  |_______/|__|   |__|
+   _______        __     __
+  |   __  \      |  |   |  |
+  |  |  |  |     |  |___|  |
+  |  |  |  |     |   ___   | 
+  |  |__/  |     |  |   |  |
+  |_______/ erek |__|   |__|aworth
 
   *** Whoa! Inspecting my element? At least buy me dinner first ***
 
