--- a/app/public/assets/sass/_base.scss
+++ b/app/public/assets/sass/_base.scss
@@ -1,6 +1,6 @@
 /* global styles */
 body {
-  background: $white;
+  background: $body;
 }
 a {
   &:hover, &:focus, &:active {
@@ -18,57 +18,4 @@ img {
   max-width: 100%;
 }
 
-.gallery-ul li {
-  display: inline-block;
-  width: 440px;
-  margin: 0;
-  padding: 20px;
-  text-align: left;
-  position: relative;
-}
 
-figure {
-  margin: 0;
-  position: relative;
-}
- figure img {
-  z-index: 10;
-  -webkit-transition: -webkit-transform 0.4s;
-  -moz-transition: -moz-transform 0.4s;
-  transition: transform 0.4s;
-  max-width: 100%;
-  display: block;
-  position: relative;
-}
-
- figure:hover img {
-  -webkit-transform: translateY(-90px);
-  -moz-transform: translateY(-90px);
-  -ms-transform: translateY(-90px);
-  transform: translateY(-90px);
-}
-
-figcaption {
-  height: 90px;
-  width: 100%;
-  bottom: 0;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  position: absolute;
-  background: #2c3f52;
-  color: #ed4e6e;
-  h3 {
-    color: $white;
-  }
-  a {
-    position: absolute;
-    right: 20px;
-    top: 30px;
-    text-align: center;
-    padding: 5px 10px;
-    border-radius: 2px;
-    display: inline-block;
-    background: #ed4e6e;
-    color: #fff;
-  }
-}
