add routes to individual project page

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -20,7 +20,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="src/css/main.min.css">
+<link rel="stylesheet" type="text/css" href="/src/css/main.min.css">
 
 <body>
     <!--Created by
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <header>
+    <header class="nav-down">
         <!-- nav -->
         <nav class="navbar navbar-fixed-top mb0">
             <div class="container">
@@ -61,9 +61,9 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="{{#if active_projects}}active{{/if}}" href="/projects">projects</a></li>
                         <li><a class="{{#if active_about}}active{{/if}}" href="/about">about</a></li>
+                        <li><a class="{{#if active_contact}}active{{/if}}" href="/contact">contact</a></li>
                         <li><a href="https://www.linkedin.com/in/derekhaw1/" target="_blank">linkedin</a></li>
                         <li><a href="https://github.com/derek-haworth" target="_blank">github</a></li>
-                        <li><a class="{{#if active_contact}}active{{/if}}" href="/contact">contact</a></li>
                     </ul>
                 </div>
             </div>
