--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -24,6 +24,7 @@
 								<span>{{this.data}}</span>
 								<a href="{{this.demo}}" target="_blank">Take a look</a>
 							</figcaption>
+							<a href="/projects/{{this.title}}" class="card-link">View</a>
 						</figure>
 			       	</li>
 		    	{{/each}}
