--- a/app/public/assets/sass/_layout.scss
+++ b/app/public/assets/sass/_layout.scss
@@ -4,10 +4,10 @@
     ====================================
 */
 
-
 /* Navbar */
 header {
-    background-color: rgba(255,255,255,0.9);
+    // background-color: rgba(255,255,255,0.9);
+    background-color: $body;
     color: $base;
     position: fixed;
     top: 0;
@@ -16,6 +16,12 @@ header {
 	letter-spacing: 1px;
 	z-index: 99;
     padding: 10px 0;
+    transition: top 0.3s ease-in-out;
+    -webkit-transition: 0.3s all ease-out;
+    -moz-transition: 0.3s all ease-out;
+    &.nav-up {
+        top: -70px;
+    }
     .navbar-header {
         .logo-name .navbar-brand {
             color: $base;
