--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -4,7 +4,7 @@
 			<div class="contact">
 			    <h2><a href="mailto:derekhaw1@gmail.com?Subject=You%20Rock,%20Rock" target="_top">derekhaw1@gmail.com</a></h2>
 			    <div class="email-message">
-			    	<p class="mzero">// Just click my email and it should open up your default client and begin your message.</p>
+			    	<p class="mzero">// Just click the email and it should open up your default client and begin your message.</p>
 			    	<p class="mzero">// Or copy and paste it if that doesn't work.</p>
 			    	<p class="mzero">// I look forward to hearing from you.</p>
 			    </div>
