--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -8,8 +8,9 @@
                         </div>
                         <div class="col-md-7">
                             <ul class="social-networks-ul list-inline">
-                            	<li><a href="https://github.com/derek-haworth" target="_blank" class="github-button">github</a></li>
+                                <li><a href="/resume">resume</a></li>
                                	<li><a href="https://www.linkedin.com/in/derekhaw1/" target="_blank" class="linkedin-button">linkedIn</a></li>
+                                <li><a href="https://github.com/derek-haworth" target="_blank" class="github-button">github</a></li>
                             </ul>
                         </div>
                     </div>
