--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -16,7 +16,7 @@
 <meta name="url" content="http://www.derekhaworth.com">
 
 <link rel="shortcut icon" href="src/images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="src/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/src/images/favicon.ico" type="image/x-icon">
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -62,6 +62,7 @@
                         <li><a class="{{#if active_projects}}active{{/if}}" href="/projects">projects</a></li>
                         <li><a class="{{#if active_about}}active{{/if}}" href="/about">about</a></li>
                         <li><a class="{{#if active_contact}}active{{/if}}" href="/contact">contact</a></li>
+                        <li><a class="{{#if active_resume}}active{{/if}}" href="/resume">resume</a></li>
                         <li><a href="https://www.linkedin.com/in/derekhaw1/" target="_blank">linkedin</a></li>
                         <li><a href="https://github.com/derek-haworth" target="_blank">github</a></li>
                     </ul>
