--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,7 +15,7 @@
 <meta name="copyright" content="Derek Haworth">
 <meta name="url" content="http://www.derekhaworth.com">
 
-<link rel="shortcut icon" href="src/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/src/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/src/images/favicon.ico" type="image/x-icon">
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
