--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -44,7 +44,9 @@
             <div class="spinner"><div class="spinner-inner"></div></div>
         </div>
     </div>
-
+    <div class="alert alert-warning" role="alert">
+        In Progress...
+    </div>
     <header class="nav-down">
         <!-- nav -->
         <nav class="navbar navbar-fixed-top mb0">
