--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 		    <div class="row">
 				<h1 class="uppercase mbm">Finding a Developer<span class="block mtm">Just Got Easier</span></h1>
 				<p>// it's me. tehe</p>
-				<a href="/projects" class="main-cta block text-center">Projects</a>
+				<a href="/projects" class="main-cta inline-block text-center">Projects</a>
 			</div>
 		</div>
 	</div>
