--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -9,6 +9,13 @@
 							<h3 class="pzero mzero">{{title}}</h3>
 							<span>{{data}}</span>
 							<a href="{{demo}}" target="_blank">Take a look</a>
+							<p class="short-desc">
+								{{#if this.shortDesc}}
+								
+								{{else}}
+									lorem ipsumd
+								{{/if}}
+							</p>
 						</figcaption>
 					</figure>
 			    </li>
