--- a/app/public/assets/sass/_layout.scss
+++ b/app/public/assets/sass/_layout.scss
@@ -38,7 +38,7 @@ header {
             color: $base;
             &.active {
                 text-decoration: line-through;
-                color: $off-pink; 
+                color: $secondary; 
             }
             &:hover {
                 transition: 0.3s;
@@ -109,20 +109,25 @@ footer {
         padding-top: 1em;
     }
     .social-networks-ul {
-        margin: 1em 0;
+        margin: 15px 0 0 0;
+        text-align: right;
+        font-size: 22px;
         li {
-            padding-bottom: 1em;
+            padding: 0 .5em;
         } 
     }
     /* 992px ----------- */
     @media only screen and (min-width: 992px) {
-      .copyright {
-        padding-top: 0;
-      }
-
-      .social-networks-ul {
-        margin: 0;
-        text-align: right;
-      }
+        .copyright {
+            padding-top: 0;
+        }
+        .social-networks-ul {
+            margin: 15px 0 0 0;
+            text-align: right;
+            font-size: 22px;
+            li {
+                padding: 0 .5em;
+            } 
+        }
     }
 }
