--- a/app/public/assets/sass/_variables.scss
+++ b/app/public/assets/sass/_variables.scss
@@ -10,7 +10,7 @@ $black: 	#000;
 $body: 		#f1f4f9;
 $base: 		#2c3e50;
 $base-font: #5e7184;
-$off-pink:  #fe6f83;
+$secondary:  #33c681;
 
 // Font Sizes
 $base-size: 16px;
