--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -18,7 +18,7 @@
 <link rel="shortcut icon" href="/src/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/src/images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/src/css/main.min.css">
 <style>
